right side panel spacing fixed and bottom spacing removed for the editor

--- a/src/styles/core/workflow.less
+++ b/src/styles/core/workflow.less
@@ -255,5 +255,5 @@
 }
 
 .divider-class{
-    margin: 8px 0px;
+    margin: 8px 0px !important;
 }
